# chess-scan

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Dockerfile.ml  LICENSE  Makefile  README.md  docker-compose.yaml  pyproject.toml
benchmarks/: README.md  argus-training-corpus.json  chess-steps-german-manuals.json  chess-steps-kings.json  chess-steps-online-sources.json  chess-steps-queen-colors.json  chess-steps-step2.json  expert-commentary-shadow-v1.json  expert-commentary-v1.json  expert-commentary-v2.json  lichess-puzzle-corpus.json  platform-training-corpus.json  print-regression-corpus.json  qa-2026-07-18.json
docs/: argus-recovery.md  commentary-quality.md  learning-loop.md  platform-support.md  position-analysis.md  print-regression-v5.md  qa-report.md
models/: argus-v2r5.json  argus-v2r5.onnx  chess-steps-v1.json  chess-steps-v1.onnx  chess-steps-v1.pt  chess-steps-v1r1.json  chess-steps-v2.json  chess-steps-v2.onnx  chess-steps-v2.pt  chess-steps-v3.json  chess-steps-v3.onnx  chess-steps-v3.pt  chess-steps-v4.json  chess-steps-v4.onnx  chess-steps-v4.pt  chess-steps-v5.json  chess-steps-v5.onnx  chess-steps-v5.pt
scripts/: adjudicate_feedback.py  adjudicate_review_feedback.py  automatic_learner.py  deploy  evaluate_argus_replay.py  evaluate_commentary_planner.py  evaluate_expert_commentary.py  evaluate_lichess_puzzles.py  evaluate_online_examples.py  evaluate_photo_stress.py  evaluate_platforms.py  evaluate_print_regressions.py  export_feedback.py  export_preferences.py  export_review_feedback.py  image_augmentation.py  promote_model.py  (+14 more)
(+98 files in other folders)
